--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "mongoose": "^5.13.23",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.9",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "eslint": "^9.21.0",
