--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "bcryptjs": "^3.0.2",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^7.5.0",
+    "helmet": "^8.1.0",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.14.1",
     "mongoose": "^5.13.23",
@@ -21,7 +25,8 @@
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
     "slugify": "^1.6.6",
-    "validator": "^13.12.0"
+    "validator": "^13.12.0",
+    "xss-clean": "^0.1.4"
   },
   "devDependencies": {
     "eslint": "^9.21.0",
